start loading scripts wasm immediately instead of defering the script

--- a/packages/cli/src/assets/index.html
+++ b/packages/cli/src/assets/index.html
@@ -21,13 +21,17 @@
   </head>
   <body>
     <div id="main"></div>
-    <script type="module">
-      import init from "/{base_path}/assets/dioxus/{app_name}.js";
-      init("/{base_path}/assets/dioxus/{app_name}_bg.wasm").then((wasm) => {
-        if (wasm.__wbindgen_start == undefined) {
-          wasm.main();
+    <script>
+      // We can't use a module script here because we need to start the script immediately when streaming
+      import("/{base_path}/assets/dioxus/{app_name}.js").then(
+        ({ default: init }) => {
+          init("/{base_path}/assets/dioxus/{app_name}_bg.wasm").then((wasm) => {
+            if (wasm.__wbindgen_start == undefined) {
+              wasm.main();
+            }
+          });
         }
-      });
+      );
     </script>
     {script_include}
   </body>
