--- a/packages/cli/assets/index.html
+++ b/packages/cli/assets/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{app_title}</title>
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        {style_include}
-    </head>
-    <body>
-        <div id="main"></div>
-        {script_include}
-    </body>
+  <head>
+    <title>{app_title}</title>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <div id="main"></div>
+  </body>
 </html>
