fix: fmt, spellcheck

--- a/packages/cli/assets/toast.html
+++ b/packages/cli/assets/toast.html
@@ -122,7 +122,7 @@
       </div>
 
       <!-- Message -->
-      <p class="dx-toast-msg">A non-hot-reloadable change occured and we must rebuild.</p>
+      <p class="dx-toast-msg">A non-hot-reloadable change occurred and we must rebuild.</p>
     </div>
   </div>
 </div>
