fix: make toast fixed

--- a/packages/cli/assets/toast.html
+++ b/packages/cli/assets/toast.html
@@ -14,12 +14,12 @@
     padding-right: 10px;
     user-select: none;
     transition: transform 0.2s ease;
-    overflow: hidden;
+    z-index: 10;
   }
 
   .dx-toast .dx-toast-inner {
     transition: right 0.2s ease-out;
-    position: relative;
+    position: fixed;
 
     background-color: #181B20;
     color: #ffffff;
