revision: increase z-index

--- a/packages/cli/assets/toast.html
+++ b/packages/cli/assets/toast.html
@@ -14,7 +14,7 @@
     padding-right: 10px;
     user-select: none;
     transition: transform 0.2s ease;
-    z-index: 10;
+    z-index: 2147483647;
   }
 
   .dx-toast .dx-toast-inner {
